# BOFA

./: F_model_go.py  M_model_go.py  README.md  athlete_latent_space.csv  bofa_go.py  bofa_ssae_go.py  bofa_viz.py  outline.txt  pca_bofa_go.py  pyproject.toml  top_10_IF_flagged  trained_bofa_autoencoder.keras
ABP/: abp.ipynb
old/: ae_bofa_go.py  pca_bofa_go.py
pybofa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pybofa/models/: abp.py  ae.py  gmm.py  if.py  ls.py  ssae.py  svm.py
pybofa/plots/: bofa_viz.py
pybofa/prep/: autoencoder.ipynb  autoencoder.py  cleaning_control_df.Rmd  config.py  pca.py  preproc.py  vf_autoencoder.py
pybofa_prep/: autoencoder.py  config.py  preproc.py
